Added ReactJS tasks

--- a/week1/fundamentals/convertToArrow.html
+++ b/week1/fundamentals/convertToArrow.html
@@ -26,29 +26,25 @@
     </p>
     <script>
 
-        document.getElementById("button").onclick = () => {
-            setBackgroundColorById("paragraph", "blue");
-        }
-        document.getElementById("alert").onclick = () => {
-            alert(document.getElementById("popup-input").value);
-        }
-        document.getElementById("hover-this").onmouseover = () => {
-            setBackgroundColorById("body", "red");
-        }
-        document.getElementById("hover-this").onmouseout = () => {
-            setBackgroundColorById("body", "white");
-        }
+        document.getElementById("button").onclick = () => setBackgroundColorById("paragraph", "blue")
 
+        document.getElementById("alert").onclick = () => alert(document.getElementById("popup-input").value)
+
+        document.getElementById("hover-this").onmouseover = () => setBackgroundColorById("body", "red")
+
+        document.getElementById("hover-this").onmouseout = () => setBackgroundColorById("body", "white")
+        
+        let getValueFromId = id => document.getElementById(id).value
+
+        let setBackgroundColorById = (id, color) => document.getElementById(id).style = "background-color: " + color
+
+        let mouseOverFunction = el => el.style = "background-color: black"
+        
         document.getElementById("clickMe").onclick = (el) => {
             let color = document.getElementById("bgkValue").value
             console.log(color)
             setBackgroundColorById("clickMe", color);
         }
-
-        let getValueFromId = id => document.getElementById(id).value
-        let setBackgroundColorById = (id, color) => document.getElementById(id).style = "background-color: " + color
-        let mouseOverFunction = el => el.style = "background-color: black"
-
     </script>
 </body>
 </html>
